fix: update image paths in html and javascript files

--- a/post.html
+++ b/post.html
@@ -11,12 +11,12 @@
 
     <body>
         <header>
-            <img src="/logomarca.png" alt="">
+            <img src="/images/logomarca.png" alt="">
             <h1>Blog</h1>
         </header>
 
         <a href="index.html">
-            <img class="postButtonImage" src="arrow-icon.png" alt="">
+            <img class="postButtonImage" src="/images/arrow-icon.png" alt="">
         </a>
 
         <div id="postsContainer"></div>
