fix: correct image paths in html and javascript files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <body>
     <header>
-      <img src="/images/logomarca.png" alt="">
+      <img src="images/logomarca.png" alt="">
       <h1>Blog</h1>
     </header>
 
