chore: organize javascript files into a dedicated scripts folder and update html files with correct script path

--- a/post.html
+++ b/post.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog</title>
         <link rel="stylesheet" href="styles/style.css">
-        <script src="data.js" defer></script>
+        <script src="scripts/data.js" defer></script>
     </head>
 
     <body>
