--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posts</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="data.js" defer></script>
+    <script src="scripts/data.js" defer></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const postsContainer = document.getElementById("postsContainer");
