fix: correct class name for element to match appropriate css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <section>
-      <h2 class="postTitle">User Posts</h2>
+      <h2 class="postsTitle">User Posts</h2>
       <div class="row" id="postsContainer"></div>
     </section>
 
